<resources>
    <string name="app_name">Technical Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="register">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="autoFillHintsLogin">Введите логин</string>
    <string name="autoFillHintsPassword">Введите пароль</string>

    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="mailAddress">Электронная почта</string>
    <string name="phone">Телефон</string>
    <string name="position">Позиция</string>
    <string name="companyAffiliation">Принадлежность к компании</string>
    <string name="language">Язык</string>
    <string name="password">Пароль</string>
    <string name="emailServer">Сервер электронной почты</string>
    <string name="portOnTheEmailServer">Порт на сервере электронной почты</string>
    <string name="databaseName">Имя базы данных</string>
    <string name="databasePassword">Пароль базы данных</string>
</resources>